# ChangeLog for sys-apps/kmod
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/kmod/ChangeLog,v 1.84 2013/06/02 13:28:21 jer Exp $

  02 Jun 2013; Jeroen Roovers <jer@gentoo.org> kmod-13-r1.ebuild:
  Stable for HPPA (bug #470580).

*kmod-13-r1 (27 May 2013)

  27 May 2013; Samuli Suominen <ssuominen@gentoo.org> +kmod-13-r1.ebuild,
  +files/kmod-13-errno_syscall.patch:
  Avoid calling syscall() with -1 patch from upstream for
  http://bugs.funtoo.org/browse/FL-534 as requested by lxnay

  10 Apr 2013; William Hubbs <williamh@gentoo.org> kmod-13.ebuild,
  kmod-9999.ebuild:
  drop --disable-silent-rules since it is part of eapi 5, thanks to Samuli
  Suominen.

*kmod-13 (10 Apr 2013)

  10 Apr 2013; William Hubbs <williamh@gentoo.org> +kmod-13.ebuild,
  kmod-9999.ebuild:
  version bump, eapi bump and sync live ebuild.

  26 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Declare this package as VIRTUAL_MODUTILS=1 for use with linux-mod.eclass wrt
  #462926

  22 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Sanitize upgrade path from sys-apps/module-init-tools by running
  update_depmod() function from linux-mod.eclass, but skipping it if we are
  upgrading or the /lib/modules directory with eg. modules.dep is missing.

  06 Mar 2013; Raúl Porcel <armin76@gentoo.org> kmod-12-r1.ebuild:
  m68k/s390/sh/sparc stable wrt #457568

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> kmod-12-r1.ebuild:
  Stable for alpha, wrt bug #457568

  15 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Warn users also about missing CONFIG_MODULE_UNLOAD (otherwise modprobe -r and
  lsmod won't behave as they should)

  09 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild:
  arm/ppc64 stable wrt #452556

  09 Feb 2013; Agostino Sarubbo <ago@gentoo.org> kmod-12-r1.ebuild: