@@ -1,19 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX kmod-13-errno_syscall.patch 795 SHA256 bc766470c0a0e53471395a8e6499f5bef7a4af5dfd52688cac17d30efb4b2605 SHA512 4bb3fcd824120d19bef2efaf19fcaab3a49089e0d7790899b322db480fe32533786d6b6a0ecd085ed00203bb87af4255c462a22997404a6b4fa431e2c4aeed58 WHIRLPOOL 5410867ec236e24d6075aeeadda8a81a43c9c3a4d02a3b330a0724bdecb3f837141eb6590331c43c5faf9e5cdb903aeaf35efe80f08c342bb14b12bcbbdfcffe
 DIST kmod-12.tar.xz 1275028 SHA256 c6189dd8c5a1e8d9224e8506bd188c0cd5dfa119fd6b7e5869b3640cbe8bf92f SHA512 f24bb25812b1902736f875bd3d7f995fa42a50cb7208b0d79a82fb5915223cf78e41018d5bc2cd1088acad5dc8e3dd737876262f4acde6479936c4e04223b629 WHIRLPOOL cde992a543945670992813ce142aa96bd94cc719f539b4734a7c2251b2918622e60a027531d5b430c872e58f28a153d3d2b4b90babe3e4b0f3c262afb09b7116
 DIST kmod-13.tar.xz 1435864 SHA256 6c36d3abba2f98c84973ae275951c866f8bf304e7356c2fe60633800239d7956 SHA512 6182a043c32944c2dc336101e4d8a9be9ccd0106677f9f7a2e76b83a09ec2fc1333aed9b82773abe09f8adb1771e796690f1610c64b337e21bdabffe76fed434 WHIRLPOOL 95196f4c65fec778727a9b8d0209dcb08e64280b4b5d6e88b5343acb3a360b62c13a0dcf510d3c2080fad4ef1562c5e9fa11f84979d0acee03dab3fac8b3eaac
 EBUILD kmod-12-r1.ebuild 2490 SHA256 d3039a640d7b84263286619dde372a812f71b6a865e68db62ab52a934d683cdc SHA512 cef09e483b21da2e2645d74d6e29f66e226d97c15139ce7736c5a8123aa764fed5f8f79efaaf786cdfbb8a9622c473ee3901163bd5f9e361eb85bb026a058b81 WHIRLPOOL 7abd4ec6a3a79ac0990c65560cf425a55cbe9fcda4e1c31f5eff7def4391bd746b4a76744f1d6c002339d5b75288f631a5873cd2296db93fe86971ff02929a3d
-EBUILD kmod-13-r1.ebuild 2514 SHA256 9cf2546c9a4464c9dbb5094881e617bfa3b2f7ff3ad413a5c6e0bee84ae51bee SHA512 7d621c1aca62e03af21ef6f75919754f9623dd69f8018a5525d8625f842b5203f090dc69a08aa08f17b91592ea2ed15846e6141f794ec9ee4b9d2f37500dd189 WHIRLPOOL 0c9355cd58fe54598655ae1241a8f167cc7cb7140e21b1296d7ee60dcc05eefc8556ae72f64c758586a91d9b0d6bf9bd54586d062549f7d0dc01e39965cc4046
+EBUILD kmod-13-r1.ebuild 2513 SHA256 6d008814fdce61903a79a6b93b0824f5b8f84ae48a099004da77dacb9fc51551 SHA512 f7dc34b8a865bfdbf605eb4bae5ea8d7cdd769bc1d722a840200f57af18b35db049b641d4fe14984b5c0eaad45e1b872dd2b31b27a7267638b99cfeca072da19 WHIRLPOOL 9fb14dec05c298bb5613466a6f688297bf1ab668ff2549aee826185f2ce67f5b68b21762fd62b107c9da96b8f4006a4285e3a3756e700404dd651008763d52f1
 EBUILD kmod-13.ebuild 2470 SHA256 4a686f137e62f9b5d3236b12d7b399462a83b78ce56641afdf64a6afdbf79231 SHA512 e728b081ee00d166a40d9405cb70288ec106e1b09273284d62f2646ecc50f44c438df60dda3a623c21f5579af51eb41b9a84c67ec7343916abb7ec06a0ff9619 WHIRLPOOL 2d312f7ae87141a187f12a171c0f795e49ad3429d2fddd4338d772898202b21861fa56b70a913d59934a288ad06ddd4746fed791cd888d7705fbe9e2acd03646
 EBUILD kmod-9999.ebuild 2473 SHA256 98b47a32e86d2d4517086c32f91b9e41846a5a6ac86c1f82458a55573dcce687 SHA512 d88e081a1ffd8f1bd2578f2edcaaf34205078cbb377630551625aeaf43c3c1da45612fab275751a178b14155e07077a7418638904eeed2f3251b8dfd2510dd67 WHIRLPOOL fac0a9a92fbf82e13cdf5b72a2505c3d4154e1504cb495ed80846cc769c919a589b4e1ccdd3a1960c5b544efc388b39de8bba72887f92be7911bde9e6baede6b
-MISC ChangeLog 12495 SHA256 e88d503bc79d11866dd44c09a5ce462a2527855a869d7788a653affe0e92943f SHA512 58ed7bdd9355985c3ec022827662efdbc8433a6fed9e70063b01f57e1769ab1833555ec415e5b27a64d7244756421ead481745c9369ebd605f90b9450f682254 WHIRLPOOL c8b40ba2213ce62ede9086044cbd9ba4cfb907706edda70b0b2e45fda628b336c9114aab7b2b054309513661e0ad0eded16c1dbdc9e44350da687247de5d3810
+MISC ChangeLog 12597 SHA256 0e9cecc5ffc3a5934f344eb69ef92b9ba773f41fd2c858ab62bccdf73866eae9 SHA512 579e6919c073b74155cca47477e7d38a8071abcb84d0abe284c30ca729a745f48a0d3d6c0a82baa2c71ae7fd8d963de238296dd608ca4e1a78067a75063dcd7e WHIRLPOOL 833872e8393bc6118537d145c00b6d3ab8b4cfbcaa2f92026261dcc9111c0c963e9ffc3181c7fe9f3a58f00eb3999395035f2d6c692d229f8cb1076f9c4f7fcf
 MISC metadata.xml 316 SHA256 f979caea5d423e7941d00ffe03b8c5a56a3f728e36492410541224e4bf33b6b2 SHA512 fdd742292a4e051bf8f57a0a8b94880824424775611ae97c97368368d6b55b15ce96dcbae0b50d43cfe438f2d083821a102524a3ed469f3d03a4d67633e14814 WHIRLPOOL a74bc7356ba96ab765c7acb24ccb33e4d3d5f58c48db18c13f684fa29aa7e633d95e5ad2fa8b8c296229196c03fc2d8e94e83a47013d6a756b3d845d2e97a4bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGrSHwACgkQVWmRsqeSphNZXQCfUk3dHqs7blBA2nZYvvPuMtYk
-QAoAnjGfe7l+TNcnNCr9O9c3ZZ3uvR1R
-=BxYD
+iQIcBAEBCgAGBQJRtKapAAoJELp701BxlEWfXgUQALtYSlBh28+1BnawlFHO85mo
+LhvUZSWBL2Eoc3jQ47Pd+1ci0BgkcqCFnK2RF/+okUL12O6xNrK6u6/qxkakCev2
+2nGeF6CISa9Suf5eKEd2CXk9XQ75Rk8ESfw+qxrf6ZKlkcpyIq9hlOtRgGvwU+jI
+IPnhXGbcOUhh8z0jZOFSCNFbFUxZ+ff0YzayHbCIY6J0XB/0q9r9D1Bd1uAePuUF
+UChbzyyDLgjWrNL86sRuut5EbIMCth0CCyohKZCVgDDXIoTwDWRaRkjDQkWJ9feM
+bY9OK1vZGyhWhx7wCScFDljB1x39l6V15TIjBnolyPk00AR/AZ1LI3WwRc7MTkyp
+Ctf4hqlzMVZZBNWm6Vy3cyRkZeq3eWIK7pTci1CzTzGdXxKLExW+0gwl9Uq09vD6
+ZKQ8xtrq2ZumP/WxFha8W8rcJOLHHjW410iDBxKP9B9in8kZSSM2Tb3v4VQtcCfB
+PZu56NFwqHsTSjI9Vi+sUXC1gIyCuAHy4KV9fER/U86NJUiu94usg9BEWhBxswMi
+eU7H2UAbWmGT3zPMRmZbmiotDhfTmE9ToKp+aLbvlu0Q3h2N2+Z/MoEC98S7TxTC
+akWVxtxEd/Ge9Uyh8LyZj5XwSLvKy9wEtRbuIgBC13hfP1NzVi7ewfrhb/f6IfFA
+Mc5Xy2bsyIqz5akmkW4e
+=uWNS
 -----END PGP SIGNATURE-----
