@@ -1,19 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST udev-init-scripts-23.tar.bz2 4438 SHA256 38759cefae630ce7ad5ccca4e16c41da64a96f60508a9a8087ad9ff0f7de8b99 SHA512 49d7af884ba1c82889169b4710a399653c8be6a621a80266b3a9232994bce3fbe9b9360b998595617ab78f2658f77b7002584c7cfb31e794ccae0a16a1a0405b WHIRLPOOL 2a977e0bbed64bad09ea4514e00941e59b050c268b18502fbe7840ac91454ae4754cac6d20fcb479cecb1b9412a03c370b9ca69173a9ac21c18c872b927c54e6
 DIST udev-init-scripts-25.tar.bz2 4911 SHA256 2210a0c76b1169d136b3f7c8f8c6ca36b4546aea7e88c355c81009cf10fb9bc3 SHA512 c3b1729c309fa2a74a5887b22239451529238a646df010be685720efe24dd29f09958aac9910aac8defeebe32f427f928376ebfee4184ca88e66f171de792795 WHIRLPOOL 7eeb60031504e9418f9cfa4097634bc1da1835d06c53a3d6e9d9c85e1a8ca6f18a545c1c198528f0c88fc67690061a7f0f755ae2559856f6e60571701fd41174
 DIST udev-init-scripts-26.tar.bz2 4921 SHA256 eff4cd581cb5d57a1fa09772f9f82a37d9a33a3828f0b7e988278a974864d203 SHA512 cbf5de51c7c1f63cfb7ded47175c3dfee0483972ce966d71bb164c78d6d6818d24a1e72cbaf9c3c0dda3674e6bb3b98c53a9e8cba27a8de6176689ddd39b0d9c WHIRLPOOL 6ade24698c8b1b1e7397f494e99e67e960505d846f21e8955e0a433dcde1d5ec5f580d13d867c78c13fc4157dbb532b0a5d4c1adedcda60f2e4186936a53b72a
 EBUILD udev-init-scripts-23.ebuild 2334 SHA256 9f3778a99f206d6b1f86deef6248be0cd8099443b12b52f784e1d50de3ec105a SHA512 5f22428ce18dd64f9720059d3c1d2835022654d57f21111ce8cd1a7a73201e58da5cf4b12178fd29abdf843584d3c2b03b6a6e2eb0261504768e02391149808e WHIRLPOOL 3f78be106633313a4988af5f81d03bccb0556d0456f71ee895eb2326c38e4b52a9162ae6319963345de67a7adebc8edd753b8aada02ca3bba1169e63ebfb9d45
 EBUILD udev-init-scripts-25.ebuild 2329 SHA256 68b6c2a82497deb0d76450f864bd8d74ea5428dbb8470d4dd2f031d8f06e9d67 SHA512 ab831d158713c8277c49ca35cd915464fe79c27d55d0c92b68eeca2af02469b532855ddb6cb0e4c3d15d19e19427504af41315ec99f0885d3592e860be436317 WHIRLPOOL 9d95368a37b74264db7a9354f60bd583645773ab0b33a830d87dd8c71e6be6e7fe3ab240e7457044115d8d69860604a1bdc20a9bb9594e1d77d97e16e7d1b164
-EBUILD udev-init-scripts-26.ebuild 2338 SHA256 414ba58df9b33fabcd30d2a326ef164d50dbd947a8f1cadf2123840a85f75646 SHA512 45bbeb82f3d98a8639ec4c3b7e025adf747156127162acae009995e943a78f8034576e9800120d4dd580a21cad79c2dc50b828f3a785f089267bd9b793cda9e2 WHIRLPOOL 58e14c1e0307cce52ff09390ebde78890c31484cad7920542ae91e82b16a2806b7215f5420bac2c64f2f13342572537cb97c3280ab2d9b788538ae1dd9818357
+EBUILD udev-init-scripts-26.ebuild 2337 SHA256 31bdd387b141eba77cde20c5f77c1127f2252a7c88dcae08443f807e7b2c642d SHA512 38e9e74b7d02e563880549355fd4da5f2dfd0f15cd0c7f0d84093d0b210616549fa22578c493b608cdd5e6cbb3d17e6fb3c8f9100a7ad3ec53d735a0defd4124 WHIRLPOOL 8869c7090ca1e8f80f0875263cd54635872339286bfc23b1518a53545721ca963784748695b477871f08812dea7614f0478885c281108087151170132f9fbc03
 EBUILD udev-init-scripts-9999.ebuild 2347 SHA256 78adf17658863e2a3b97098f4044881e1dd881fbe8e5935a14c04a707207f02e SHA512 150b62d9cb23c6cd3a08fbf4a7ec92c74103b1b65cd3c585a334a07936bb225708b7fb103452ce8f874a1ef7c2511338dd9c54148d70b9e34b562c32462721c5 WHIRLPOOL 23081a19ff36975a270616bdf2829edf7c931abd402c2f2643b944579509a7e09521181e1e43c45c8d5717e091b6000382e13f4657d717071c35c597be968359
-MISC ChangeLog 11149 SHA256 99a141177c7049cfcb8d08473065cb59df312adfc1f054c3d16b986b06ef98c0 SHA512 a3a0ff877f7698e9b79127f0ed0acde3d1f7f20db76db1ef5343af11d709d0e59613b401c2882d9743f49a1f89e34d1e93a175393d9c526e6d0f53070a43f11f WHIRLPOOL 93f14dd88488c5fb413cec646250bb51b289741d87bd1577fe1cfea3241290e7f67686d425654bd9ff0cd63351f7c16140be2fc1abfa6848c5caef3c5da64003
+MISC ChangeLog 11261 SHA256 95444487e75426094bad4b0eece6eb3b29363de7663fc8ba7b7c66d5eb304bef SHA512 6acf9dce7c7dd26062def15e4e6d752c690b78cb30fe026e35dc3dd31757b5451fbe522a182f6f4504aad70e4e22e02786f80703617be4b0dbb175a88e3b6489 WHIRLPOOL 04bf19e0a61513d040b1fa1cfa935803a1a8e34d11ee782e8f55316679c4c2761efea85757777f24cd7b32748ae08d07a6e8347797c64ddb22dc23aa8d6ecbd1
 MISC metadata.xml 206 SHA256 e8bae0ea2f16b0ad92858b68718c01ab85b5e6995a35b88c74e4ad9772b9f813 SHA512 f6558663be8014488111639a4eeadc9e691f57f2eb4f3c97d6022a50ab2659fac2df458cefed5e29a6661d59221b15332aefa00c027552a8f4bbefc3988e2a90 WHIRLPOOL b515e201c4f614326c4ee0ef0e13fd9d277e913d96265ecce11b41c9628fa38d1e34f90fab1073527e153a9e2e8929c5fee748a8e5eaf98b58fe15928c8ad457
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGrSMsACgkQVWmRsqeSphOlrwCeKMLioe3onkDt85HqMasQj3hM
-hS8AnR60KwHvNGvDfAOcA8091R/hw4nB
-=gwkw
+iQIcBAEBCgAGBQJRtKaiAAoJELp701BxlEWfvLAP/0P7K57dYe/Nfj3jKv4gdJuc
+bShP/kkgfRBW89guEA79O+EqKNAFBtfTfizw89Bv5SeZfH/nFJCpyBjGyrnBytFd
+fnaH/dY2f9APrP2V3HeUfVonBdWYW99oeVK0LNWZsKmiNaLrUAv6YOjf2OFEaZa0
+knTs14VqutmupDBxdJDA2DwFemMR7I4tZna7lenVWOZsQNWqhJ54Uzm8ZDyILVfG
+DFeA5VDup+lo3Z20Lbf3YkngR7U19kJSfYLi4lJIW+miZWJq/Sk1L2pfv4geYWQ9
+WFJLU6m0RJ3d78/BEZsO+U8BneAsXnRj1mHpA78eHO+qirWdtyz7ZdfPu1rEqJXn
+28AOpbme8IsHKUdV6zBAx5qQflAC+l0XO67IsbHK66zihZAZrlG18dcwW70zA2m4
+GrNTBEnWB9LwcWc7BJSKL7iFbonUnuIyPfQhfwyjdkphHB9CaIjZFPz5sJQgdpBE
+0pgauMXT9VAIfVa8A/xpCgHqiljcFDKM0mbTybpWWb74SJFF6U1+x4Sb93O2d+y7
+tT9xaiLGHUq3QCSOaR7RDftwDppokhxP/5ZEIGOR2YxexkiMpwZQYThQDPRyYB+o
+6ZPfSs35RSEvuVSxIPWS+/JPHoim1Qhj+l9Ryn4lxRrNQIsuC0SxvnFFAi+Ek3cJ
+M96w2M/AXaLEARwcz/FI
+=brXK
 -----END PGP SIGNATURE-----
