@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 80-net-name-slot.rules 1820 SHA256 f958d54247f84cdbac3e1b77261d6bcf7c630343ee6e70e4e59d0f3098d774f5 SHA512 13671a02b7504d77c5834f3835a1f8adef4faae04653f30ca177c6d3351fc7357b659cafe0392736ad76201e838c396364f42fa6ae3ee9f1ffb7babd50b613b3 WHIRLPOOL ad06ca6bc7d5f336cc3d3a2cac6bfed0b0f2fd389f3638115f402e7c840df442e3a249f6436034c158d42f0d64f0a6af88dae8afd44a80b1219f31700e37f899
 DIST systemd-197.tar.xz 2054644 SHA256 e6857ea21ae24d7056e7b0f4c2aaaba73b8bf57025b8949c0a8af0c1bc9774b5 SHA512 df158f85dee4c38dc2ff305bc03eee3b71d77eb683ab2739549282f7d552af4d2a247f52241f68e1b7c88c668bce93531986a39937a99cac401791ec95916769 WHIRLPOOL 027fc6aa5972988173721b120b8c1f371bc02d3066e04ea0923d6cc70778a3381f600a865aa136b5789755fbd5358e97304da265f8937d789a28b33cc778df46
@@ -10,22 +10,28 @@ DIST udev-200-patches-1.tar.xz 1712 SHA256 8e1ca63b27a4db7a6d3d76cb700ff88a48404
 DIST udev-204-patches-2.tar.xz 1824 SHA256 d693c79b93865dd4f3092f5f9e69221a494d286f15dcc5418de1e09120289404 SHA512 e5004a8bdaca6ead9bd5f345ff86c94b05579cb3aaa032782dc13e1a1d574ef65e294c01b44143f78517db6f64fb630470c082f43b6989134a8e68f48d444e6a WHIRLPOOL ba21f3d8f4964da79476102eb82c1b5ffd7e91b5d60be705cb9784fc2150dba3faf4afe7718e2f9dfc5cc7e79644bf21b8312fec328a733e056eb60dc0269222
 EBUILD udev-197-r8.ebuild 15057 SHA256 854d75fdb78b73399cb6f096c26cfbc640d8ca077fc62b1c63f5e9f6de62f36c SHA512 9e4da40b18bc6da38ccedc6675558672c1d7d73144fde6204fbaeea5f5080fd985429da0f54429613c98e8e9802505f9ce456874c143e5017e191a3df6875964 WHIRLPOOL 4485b8c1096f016f3bbcc96aa7ad119b3ca44604827afd9f1aa6c23172a66705f67522662539b9626b138a79833082d5979fa795777de25e128b7fd125e5e1e4
 EBUILD udev-200.ebuild 13602 SHA256 132c46b1cb398e17d3e9479ba6e6c0a96ccfbceaa867cd0b2c68004db8c52736 SHA512 3b8ebc3f7dc4263188edf2db529f6bb108433cb82c0dc3e35967b1b4ade60fe2a2106f7ab6febece842a8325f00aef13a0fe15d57b26f9b745237351b021924a WHIRLPOOL 742c5092c7fe211aef1d747642ab50f508c4cdfec8263830ccf76b65adb76e50bee5bff727d63c8492b937f3288dbe0749532c8145941b948c9e0d03c2556d23
-EBUILD udev-204.ebuild 13544 SHA256 d86127ccaa17aa34d3fc6af769c6b8c76dd793d4aac6ec1c012bb4e9f955a658 SHA512 851ef8aca7d99d2cc8e4ccab74ddfd604fefae9eb8ca7ee8f6eccb58054bf5075e7481529332b1c23b31bce58de5e95a4d681aa1d34e6b6cf9c2471bee24e2aa WHIRLPOOL f5bcedc327c14621f3eeb761b0d1959889d9b01ef7412296ea1c9bc3518a2550a5209d0609ddb0aa58327b74df0efff3596822601edaeee77979a4f7f7f2b64e
+EBUILD udev-204.ebuild 13543 SHA256 1fb90d7288275b138638360baa3a647c7b87a4f6625bc1f37a398bd0dac149a0 SHA512 1c896fc1aec1966d2aa33cb49b8162f8d47c2c66cefee40aa29395eca3cc0754c95913daf37c3c68b25c77a795cd1bdf0ad5a9871544c50a6fca64c9ff293b71 WHIRLPOOL 950217757c9b4b7003b1d3d9b434407f695ffc570c85343ca96ef545d539a7fc6010969c9fb38d36d9195bd250b84911030559c7161b3a4cb0f0c2ddc1d2c1ac
 EBUILD udev-9999.ebuild 13719 SHA256 07979f30f1a93d51507dd054e3a5b47ba4a25746784a327304b3c4a80e9c3088 SHA512 6ec4587ca4654e2d8e00b272ea2dba8985863e9d703391980b66289d8c7a166bb7c729c5476827d22085353406685e05b0e4e9eb00548305daff34226809b95d WHIRLPOOL 473349290956d7c4847b4bfd5933023ae3434599187e4ddf8e768ec8739e54fd69d52f4885f47217bd3d6d82053b0ab68eb3fb2bde8e1b2606e83090f9d0bcbb
-MISC ChangeLog 27035 SHA256 eae7a7b73dffd0f33efa787c0b9973180cac0f553b00f7b971244be25cb57974 SHA512 048b3db47c8ec4ae48d1afa420660650a36d59adbb88e4120912d6e495172c8bd661fc5fa50422719ecd18f1125c4f64375e49add4a1f6ed6806cf23c41d5876 WHIRLPOOL f251b972c5ade09462cbc2e66de97b2ffd29702007fee72635b40ddb82f6b95acf3d1caf10d7d3f0ed4f97db498387844fb122d82cb77293b646f7c012271556
+MISC ChangeLog 27129 SHA256 30f8ed491b7407e82de13e179fe253043807870551eae7974af975a625069525 SHA512 4c2d3a60d5a59565c279e4cb8c74628cc0299fc9d00eea3133606186273ec8286064951821f4e7059282c9025684ceb99ce8e4bd08360ab13c29fae287465d9a WHIRLPOOL 8c3279d60cae71daf99fe2f83c12814aa7955242722ea203c4f35e2519d0902b5eba42b5199800ea28dcdb0ee9d5b3f819f034e08baa6a8cb61bc268a1f64dc3
 MISC ChangeLog-2009 105929 SHA256 94137298457e8d6361cf25e664279d2f9b424f6758814e7ba90e9e2cbf1ea7e5 SHA512 f110e1aa70b11c28263ec5e88973c99426717bce62400c8e9ad860b9e7b67d4aadc053596a9e54faa9435a774c1e8aa0954ae8541760cf061beef26867871548 WHIRLPOOL 215252c0a5c249241813d1bb208da62e68c858e07d1df327cf9175ac739f214813a33c09a64afb4821445e93394dd6d6d500b33e35ed912c1eeccff3365cb7fb
 MISC ChangeLog-2010 10729 SHA256 44fe328d57b1ba342b328c7a256632e7960976a12e8e9c9791a5fc8ce52c67ca SHA512 a8c371aafe757923e24c023cbf55f3ad084f15f0f038eceaee0dffe58919a17b17bc16cb4b7b1d3f65a19c82b20330a854ec2c801f6d7c7799723ab92d255b49 WHIRLPOOL 3d34e758def921d3d2ed7369392ba5f833fc3a899181c2895fd3da6c9846cf41c9eddbf56de60a52fadd76ffd4c66d92b660b0bc6ca4dddbb2fa49fe0f93cb0b
 MISC ChangeLog-2011 11721 SHA256 363429a267f251b1ac1c34479e7afa5d7ea13811aa1ba46d7c5489860e542276 SHA512 be7bbaa68602c30ba9cb3e5037ee91ff94c35a0c2ff0b96c5eee14c0e81f8e52232bae44f1d01ff23acedabdb03fdc78f3d11a40cfed2cfef1c45fe2492f7bf4 WHIRLPOOL 3e85eb967f26a8224fd0ed5824009c62271fa5269a6a207da8c8abd7b09cc4308ff847021afcae5a86cedd723a5aeca1ce2f6712a187dfbd36118e097d74510f
 MISC ChangeLog-2012 23242 SHA256 5466af35dd494cc2a4d0bc9cc0f4ff03e0d3d7ac7ec595a70b2b15896f33658f SHA512 8488fe00da8ba8b3db5d72c35ee3ed5b372a673a09eb0422102583a76d6671ffded8d0086362fddb2bb056a9b9a1f7c3139dfbb48d0bcd12a53ac07ad9473e68 WHIRLPOOL 0352206d82c41cbf3ac0fcbf3392e8e7ae94e8bcf35d8cb8a99c48bf790aa94b9f90a627deb155ab41d8c2f028658720f55347a6e1048e5c798060cc579d2c49
 MISC metadata.xml 726 SHA256 3a229c7b2f88da5884a450d4744b911ee85fc0cc787ba3ed6e9b6910128051e8 SHA512 d8a8281f33120b7a55210fd9267d0f2f7462865c942da007ed764b54611f12f3d374d7d3f088d78188c2b83d09609bd0776e524ff81dc5d30230fdfb20e4511b WHIRLPOOL 5168ebaeb50b338f0f89fa614dcc077741d4f439f8e333cdb025a0954f22ba769a513691b9dbb82f3e27af279d59b6b912eff663dff40e7e9ee0b3f9f67453f4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRsh8kAAoJEEdUh39IaPFNfEwIAJYYH0hQQCATyHLv1bCjEirg
-WiwZNzX8vtY0WGVH56B39EZv1G/00yZiB5qKdSmlTiXGxfempZ8i1npQ46ZIm7U+
-5a2x9Q6krxx3KE+EEfU6a8snVDz7L4UgdrQAjZJL02KAGKIY1Hm6nfLMuN1051QX
-7Fy6R/mkRk6kQsKiAHaF0askmOSFKcgapQPA1zBdNYNwQvNyXq5V7nQ5XVUbff2Z
-aWCnO56tD2qeC9kZAyRFhP7lIOisQoMQfpCsmZ9+lNJtcbVrc75j1ma/rEWjod8z
-yqxl3RZ9Hb0SBSLjAR9Czg9TxB87ScgzslmJtfkkAbbl2Zo7AS6+4K4NVIQGUwc=
-=3DTQ
+iQIcBAEBCgAGBQJRtKabAAoJELp701BxlEWfjfwQAIDujvsGZSqqErsxOHbFRuiu
++otgthomtaxedgB1a+pdMtU7nclJVTCpa61n8onuiJXrxOpzykADpy/bkaQabWn7
+7oaGPMrNSye0o+5e3vB8ELB4IsuR0HtSHLxYPbvZjqkk3TKLkdu1au+c+hiVm0XW
+XPdjIxqC8BPno9mopcADbhy75alt514cN6HSEnoW9e5orVAh79BbHlHRoWlG7TE6
+R1OALocfBUjcdTKIWHTrrPfPItfo8awpW/TVl+cKVMjSCZ2b5pnqBgjhTUhAbSCF
+pKfIINBFN2WvfSioeJrwb0m+e5k3B1PvxGpRFHLhBITNnBrtwe9MzYqGglNU0A6t
+WTFUsQAAiCtafJy1twzTNoCiGEuEgHtZF/5uJ586D4kRVrdvt8QCCHvwYNqFRJ4n
+UZOM8/x0xY6B9NqIRP3Ikmrw1In7f1HUOeCokLgpKZXoIdnrCOppIOs6oC35Ikni
+tfPD4I/83dPhEAw67XzNu+GJ0G80B0AwCQd7DYXZdGfXGlGFnCuSc1uRHo3Ty9jH
+xRvoXPFhbT7BQd/85nwu6rT7LMw1UAYn3y7aMJhlLv7OoiPeb1oyb0DCuymuy7Pk
+ypWqyll+PHsBEfKqqKYHcfjBl8cy/YBnk96t9McC8XZOa795D0tVShMK3QRmGeMP
+YnEvnWwvBZkBgmo8CPhw
+=fmSt
 -----END PGP SIGNATURE-----
