@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/udev-init-scripts
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.72 2013/06/02 13:29:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.73 2013/06/09 16:03:26 ago Exp $
+
+  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
+  Stable for sh, wrt bug #470580
 
   02 Jun 2013; Jeroen Roovers <jer@gentoo.org> udev-init-scripts-26.ebuild:
   Stable for HPPA (bug #470580).
