@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.919 2013/06/07 18:00:05 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.920 2013/06/09 16:03:20 ago Exp $
+
+  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-204.ebuild:
+  Stable for sh, wrt bug #470580
 
   07 Jun 2013; Samuli Suominen <ssuominen@gentoo.org> udev-9999.ebuild:
   Revert upstream commit that discontinued support for --enable-static in order
